<resources>
    <string name="TKGS_preferred_list">Preferred List</string>
    <string name="TKGS_reset_table_version">Reset Table Version</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_text_done">Done</string>
    <string name="add_schedule">PVR</string>
    <string name="additional_system_update" />
    <string name="app_name">Live TV</string>
    <string name="attention_unplug_device">Attention: Do not unplug the device, or it may cause unspecified errors!</string>
    <string name="audio_type_aac">AAC</string>
    <string name="audio_type_ac3">DD</string>
    <string name="audio_type_dts">DTS</string>
    <string name="audio_type_dts_express">DTS_EXPRESS</string>
    <string name="audio_type_dts_hd">DTS_HD</string>
    <string name="audio_type_he_aac">HE_AAC</string>
    <string name="audio_type_he_aacv2">HE_AACv2</string>
    <string name="audio_type_mpeg1l2">MPEG1-L2</string>
    <string name="automatic_Channel_ordering">Automatic Channel Ordering</string>
    <string name="banner_no_program_title">(No program title.)</string>
    <string name="browse_scale_anim_factor">1.4</string>
    <string name="bundeslandliste">Bundeslandliste</string>
    <string name="burgenland">ORF 2Burgenland HD</string>
    <string name="cam_scan_not_init">CI Plus Network is not initialized. You must search for updated network!</string>
    <string name="cam_scan_schedule">CI Plus Network search schedule time is reached. You may search for updated network!</string>
    <string name="cam_scan_urgent">CI Plus Network is unavailable. You must search for updated network!</string>
    <string name="cam_scan_warning">CI Plus Network has changed. You may search for updated network!</string>
    <string name="channels_item_app_link_app_launcher">Open %1$s</string>
    <string name="channels_item_down">Channel Down</string>
    <string name="channels_item_program_guide">Program Guide</string>
    <string name="channels_item_setup">New Channels Available</string>
    <string name="channels_item_up">Channel Up</string>
    <string name="ci_title">Cam Info</string>
    <string name="closed_caption_option_item_off">Off</string>
    <string name="closed_caption_system_settings">Customize Formatting</string>
    <string name="closed_caption_system_settings_description">Set system-wide preferences for closed captions</string>
    <string name="closed_caption_unknown_language">Closed captions %1$d</string>
    <string name="commmon_dialog_book_reminder_content">is coming, Do you want to switch to it?</string>
    <string name="common_dialog_ews_service_content">Do you want to switch to the EWS service?</string>
    <string name="common_dialog_msg_no">NO</string>
    <string name="common_dialog_msg_yes">YES</string>
    <string name="common_dialog_special_service_content">Do you want to switch to the special service?</string>
    <string name="common_dialog_start_cc_stop_ginga">Do you want to stop Ginga Application and open Closed Caption?</string>
    <string name="common_off">Off</string>
    <string name="common_on">On</string>
    <string name="condensed_font">sans-serif-condensed</string>
    <string name="continue_to_seek_not_support">Continued to seeking is not supported.</string>
    <string name="copy">Copy</string>
    <string name="cplogo_bt_adjust">Adjust</string>
    <string name="cplogo_bt_cancel">Cancel</string>
    <string name="cplogo_bt_full_screen">Full Screen</string>
    <string name="cplogo_bt_no">No</string>
    <string name="cplogo_bt_ok">OK</string>
    <string name="cplogo_bt_special_area">Special Area</string>
    <string name="cplogo_capture_res_cancel">This operation has been cancelled.</string>
    <string name="cplogo_msg_adjust_position">Do you want to adjust the position of the special area?</string>
    <string name="cplogo_msg_capturing">Capturing...</string>
    <string name="cplogo_msg_res_fail">Capture failed, Please try again.</string>
    <string name="cplogo_msg_res_success">Captured Successfully</string>
    <string name="cplogo_msg_select_position">Please select a position to save the logo.</string>
    <string name="cplogo_msg_this_screen">Do you want to capture this screen?</string>
    <string name="cplogo_msg_which_screen">Do you want to capture the full screen or a special area?</string>
    <string name="cplogo_title">Logo Capture</string>
    <string name="create_tshift_file_success">File Created Successfully</string>
    <string name="date_separator">/</string>
    <string name="delete_pvr_file_dialog_confirm1">Will delete this file.</string>
    <string name="description_age_10">Recommended for ages 10 and over.</string>
    <string name="description_age_11">Recommended for ages 11 and over.</string>
    <string name="description_age_12">Recommended for ages 12 and over.</string>
    <string name="description_age_13">Recommended for ages 13 and over.</string>
    <string name="description_age_14">Recommended for ages 14 and over.</string>
    <string name="description_age_15">Recommended for ages 15 and over.</string>
    <string name="description_age_16">Recommended for ages 16 and over.</string>
    <string name="description_age_17">Recommended for ages 17 and over.</string>
    <string name="description_age_18">Recommended for ages 18 and over.</string>
    <string name="description_age_19">Recommended for ages 19 and over.</string>
    <string name="description_age_20">Recommended for ages 20 and over.</string>
    <string name="description_age_4">Recommended for ages 4 and over.</string>
    <string name="description_age_5">Recommended for ages 5 and over.</string>
    <string name="description_age_6">Recommended for ages 6 and over.</string>
    <string name="description_age_7">Recommended for ages 7 and over.</string>
    <string name="description_age_8">Recommended for ages 8 and over.</string>
    <string name="description_age_9">Recommended for ages 9 and over.</string>
    <string name="description_age_num">Recommended for ages %d and over.</string>
    <string name="description_ar_tv_atp">Suitable for all audiences. Programs may contain mild violence, language and mature situations.</string>
    <string name="description_ar_tv_d">Drugs</string>
    <string name="description_ar_tv_s">Sex</string>
    <string name="description_ar_tv_sam_13">Suitable for ages 13 and up. Programs may contain mild to moderate language and mild violence and sexual references.</string>
    <string name="exit">Exit</string>
    <string name="menu_arrays_Swap">Swap</string>
    <string name="menu_c_net">Network ID</string>
    <string name="menu_ci_user_preference_item_ammi">AMMI</string>
    <string name="menu_ci_user_preference_item_broadcast">Broadcast</string>
    <string name="menu_ci_user_preference_item_default">Default</string>
    <string name="menu_setup_biss_key_freqency">Frequency</string>
    <string name="menu_setup_biss_key_horizonal">Horizontal</string>
    <string name="menu_setup_biss_key_polazation">Polarization</string>
    <string name="menu_setup_biss_key_vertical">Vertical</string>
    <string name="menu_system_info_channel">RF Channel Name</string>
    <string name="menu_system_info_cn">C/N</string>
    <string name="menu_system_info_pre">Pre RS</string>
    <string name="menu_system_info_prog">Prog</string>
    <string name="menu_system_info_service_id">Service ID</string>
    <string name="menu_system_info_symbol_agc">AGC</string>
    <string name="menu_system_info_symbol_lnb">LNB</string>
    <string name="menu_system_info_symbol_onid">ON ID</string>
    <string name="menu_system_info_symbol_svctype">Service Type</string>
    <string name="menu_system_info_symbol_tsid">TS ID</string>
    <string name="menu_system_info_uec">UEC</string>
    <string name="menu_tv_delete">Delete</string>
    <string name="menu_tv_frequency">Freq.</string>
    <string name="menu_tv_insert">Insert</string>
    <string name="menu_tv_name">Name</string>
    <string name="menu_tv_number">Num.</string>
    <string name="menu_tv_rf_sym_rate">Symbol Rate</string>
    <string name="menu_tv_sigle_modulation">Modulation</string>
    <string name="menu_tv_single_signal_level">Signal Level</string>
    <string name="menu_tv_single_signal_quality">Signal Quality</string>
    <string name="menu_tv_skip">Skip</string>
    <string name="menu_tv_system">System</string>
    <string name="menu_tv_type">Type</string>
    <string name="pvr_deviceinfo_format">Format</string>
    <string name="pvr_deviceinfo_info">Info</string>
    <string name="pvr_deviceinfo_set_pvr">Set PVR</string>
    <string name="pvr_deviceinfo_set_timeshift">Set TimeShift</string>
    <string name="pvr_deviceinfo_speed_test">Speed Test</string>
    <string name="pvr_disk_ispvr_pvr_tshift">PVR/TimeShift</string>
    <string name="pvr_disk_na">NA</string>
    <string name="pvr_disk_no_name">No Name</string>
    <string name="pvr_disk_size_temp_3_8_3_8gb">3.8/3.8GB</string>
    <string name="pvr_schedulepvr_ch41">CH41</string>
    <string name="pvr_schedulepvr_date">2013/01/04 13:22 Tue</string>
    <string name="pvr_schedulepvr_record">Record</string>
    <string name="pvr_schedulepvr_time">00hr 00min</string>
    <string name="pvr_schedulepvr_week">Week</string>
    <string name="pvr_title_device_info">Device Info</string>
</resources>