<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:textSize="@dimen/nav_pvr_textsize" android:textColor="@color/white" android:id="@+id/device_info_hint" android:padding="15dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30sp" android:layout_marginRight="30sp" android:stretchColumns="0,1,2,3" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
    <TableRow>
        <TextView android:textColor="@color/white" android:layout_gravity="left|center_vertical|center_horizontal|center" android:id="@+id/disk_label" android:src="@drawable/tk_cm_color_key_green" android:text="@string/pvr_disk_no_name"/>
        <TextView android:textColor="@color/white" android:layout_gravity="center_vertical" android:id="@+id/disk_size" android:text="@string/pvr_disk_size_temp_3_8_3_8gb"/>
        <TextView android:textColor="@color/white" android:layout_gravity="center_vertical" android:id="@+id/disk_is_tshift" android:src="@drawable/tk_cm_color_key_blue" android:text="@string/pvr_disk_ispvr_pvr_tshift"/>
        <TextView android:textColor="@color/white" android:layout_gravity="right|center_vertical|center_horizontal|center" android:id="@+id/disk_na" android:text="@string/pvr_disk_na"/>
    </TableRow>
</TableLayout>
