<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="#171717" android:layout_width="match_parent" android:layout_height="match_parent">
    <TableLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="100dp">
        <TableRow android:layout_marginTop="20dp">
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_versioninfo_name" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_tv_single_signal_level" android:layout_weight="1"/>
            <ProgressBar android:enabled="false" android:gravity="center" android:id="@+id/common_ps_signal_level" android:focusable="false" android:clickable="false" android:layout_width="match_parent" android:layout_height="12dp" android:layout_weight="1" style="?android:attr/progressBarStyleHorizontal"/>
            <TextView android:id="@+id/common_tv_signal_level" android:layout_weight="1" style="@style/listitem_normal_tv"/>
        </TableRow>
        <TableRow android:layout_marginTop="20dp">
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_signal_qua" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_tv_single_signal_quality" android:layout_weight="1"/>
            <ProgressBar android:enabled="false" android:gravity="center" android:id="@+id/common_ps_signal_qua" android:focusable="false" android:clickable="false" android:layout_width="match_parent" android:layout_height="12dp" android:layout_weight="1" style="?android:attr/progressBarStyleHorizontal"/>
            <TextView android:id="@+id/common_tv_signal_qua" android:layout_weight="1" style="@style/listitem_normal_tv"/>
        </TableRow>
        <TableRow android:layout_marginTop="20dp">
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_channel" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_system_info_channel" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_channel_value" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_freq" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_setup_biss_key_freqency" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_freq_value" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
        </TableRow>
        <TableRow android:layout_marginTop="20dp">
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_pre" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_system_info_pre" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_pre_value" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_prog" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_system_info_prog" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_prog_value" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
        </TableRow>
        <TableRow android:layout_marginTop="20dp">
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_cn" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_system_info_cn" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_cn_value" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_service_id" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_system_info_service_id" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_service_id_value" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
        </TableRow>
        <TableRow android:layout_marginTop="20dp">
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_uec" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_system_info_uec" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_uec_value" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_tsid" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_system_info_symbol_tsid" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_tsid_value" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
        </TableRow>
        <TableRow android:layout_marginTop="20dp">
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_sysbolrate" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_tv_rf_sym_rate" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_sysbolrate_value" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_onid" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_system_info_symbol_onid" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_onid_value" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
        </TableRow>
        <TableRow android:layout_marginTop="20dp">
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_modulation" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_tv_sigle_modulation" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_modulation_value" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_networkid" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_c_net" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_networkid_value" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
        </TableRow>
        <TableRow android:layout_marginTop="20dp">
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_agc" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_system_info_symbol_agc" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_agc_value" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_lnb" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_system_info_symbol_lnb" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_lnb_value" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_svctype_2" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_system_info_symbol_svctype" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_svctype_value_2" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
        </TableRow>
        <TableRow android:id="@+id/tablerow_for_svctype" android:visibility="gone" android:layout_marginTop="20dp">
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_empty" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_empty_value" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_svctype" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/menu_system_info_symbol_svctype" android:layout_weight="1"/>
            <TextView android:textSize="@dimen/small_text_size" android:id="@+id/common_system_info_svctype_value" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
