<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/pvr_timeshift_deviceinfo" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <RelativeLayout android:orientation="vertical" android:id="@+id/device_info_list_root" android:background="@drawable/info_banner_background" android:layout_width="400dp" android:layout_height="match_parent" android:layout_centerInParent="true">
        <TextView android:textColor="@color/white" android:gravity="center_horizontal" android:id="@+id/device_info_title" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/pvr_title_device_info"/>
        <TableLayout android:textSize="13sp" android:textColor="@color/white" android:id="@+id/device_info_hint" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:stretchColumns="2" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:layout_marginStart="20sp" android:layout_marginEnd="20sp">
            <TableRow android:gravity="center">
                <ImageView android:layout_gravity="center_vertical" android:padding="6dp" android:src="@drawable/tk_cm_key_enter" android:layout_column="1"/>
                <TextView android:textAppearance="@style/nav_pvr_filelist_text" android:layout_gravity="bottom" android:padding="4dp" android:layout_column="1" android:text="@string/pvr_deviceinfo_info"/>
                <ImageView android:gravity="end" android:layout_gravity="center_vertical" android:padding="6dp" android:src="@drawable/tk_cm_key_exit" android:layout_column="1"/>
                <TextView android:textAppearance="@style/nav_pvr_filelist_text" android:layout_gravity="bottom" android:padding="4dp" android:layout_column="1" android:text="@string/exit"/>
            </TableRow>
        </TableLayout>
        <ListView android:textSize="13sp" android:textColor="@color/white" android:gravity="center_horizontal" android:id="@+id/device_info_list" android:padding="6dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:listSelector="@drawable/nav_ch_list" android:dividerHeight="0dp" android:layout_above="@+id/device_info_hint" android:layout_below="@+id/device_info_title" android:layout_alignParentStart="true"/>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/device_info_sub_menu" android:background="@drawable/info_banner_background" android:layout_width="150dp" android:layout_height="match_parent" android:layout_marginTop="50dp" android:layout_marginStart="158dp" android:layout_toEndOf="@+id/device_info_list_root">
        <Button android:id="@+id/disksetting_setshift" android:background="@drawable/menu_dialog_button" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/pvr_deviceinfo_set_timeshift" style="@style/pvr_tshift_schedulelist_btns"/>
        <Button android:id="@+id/disksetting_setpvr" android:background="@drawable/menu_dialog_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/pvr_deviceinfo_set_pvr" style="@style/pvr_tshift_schedulelist_btns"/>
        <Button android:id="@+id/disksetting_format" android:background="@drawable/menu_dialog_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/pvr_deviceinfo_format" style="@style/pvr_tshift_schedulelist_btns"/>
        <Button android:id="@+id/disksetting_speedtest" android:background="@drawable/menu_dialog_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/pvr_deviceinfo_speed_test" style="@style/pvr_tshift_schedulelist_btns"/>
    </LinearLayout>
</RelativeLayout>
