<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="left" android:background="@color/livetvsettings_background" android:padding="20dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@+id/description" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/menu_setup_biss_key_polazation" style="@style/Canvas.Scan.Text.Large"/>
    <RadioGroup android:orientation="vertical" android:id="@+id/radioGroup_pola" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="10dp" android:layout_below="@+id/description">
        <RadioButton android:id="@+id/btn_h" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/menu_setup_biss_key_horizonal"/>
        <RadioButton android:id="@+id/btn_v" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/menu_setup_biss_key_vertical"/>
    </RadioGroup>
</RelativeLayout>
