<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="@dimen/middle_text_size" android:gravity="left|center_vertical|center_horizontal|center" android:id="@+id/menu_ci_user_preference_default" android:background="@drawable/nav_ci_item_selector" android:paddingLeft="8dp" android:paddingTop="@dimen/nav_channel_details_channel_info_padding" android:paddingBottom="@dimen/nav_channel_details_channel_info_padding" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/menu_ci_user_preference_item_default"/>
    <TextView android:textSize="@dimen/middle_text_size" android:gravity="left|center_vertical|center_horizontal|center" android:id="@+id/menu_ci_user_preference_ammi" android:background="@drawable/nav_ci_item_selector" android:paddingLeft="8dp" android:paddingTop="@dimen/nav_channel_details_channel_info_padding" android:paddingBottom="@dimen/nav_channel_details_channel_info_padding" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/menu_ci_user_preference_item_ammi"/>
    <TextView android:textSize="@dimen/middle_text_size" android:gravity="left|center_vertical|center_horizontal|center" android:id="@+id/menu_ci_user_preference_broadcast" android:background="@drawable/nav_ci_item_selector" android:paddingLeft="8dp" android:paddingTop="@dimen/nav_channel_details_channel_info_padding" android:paddingBottom="@dimen/nav_channel_details_channel_info_padding" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/menu_ci_user_preference_item_broadcast"/>
</LinearLayout>
